update keywords and description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "extract-domain",
-  "version": "1.1.0",
-  "description": "Extract domain from given string",
+  "version": "1.1.1",
+  "description": "Extract domain name from given string",
   "main": "dist/extract-domain.min.js",
   "author": "Bjarne Oeverli",
   "license": "MIT",
@@ -21,11 +21,13 @@
   },
   "keywords": [
     "extract",
+    "domain",
+    "name",
+    "parse",
     "get",
     "fetch",
     "string",
     "url",
-    "domain",
     "browser",
     "node"
   ],
