--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "extract-domain",
-  "version": "1.1.1",
-  "description": "Extract domain name from given string",
+  "version": "1.1.2",
+  "description": "Extract domain name from URL",
   "main": "dist/extract-domain.min.js",
   "author": "Bjarne Oeverli",
   "license": "MIT",
