--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "npm run pretty && NODE_ENV=production webpack",
     "watch": "webpack --watch",
     "test": "mocha -R spec index.test.js",
-    "pretty": "prettier --tab-width=4 --print-width=100 --single-quote --trailing-coma  --write *.js *.js"
+    "pretty": "prettier --tab-width=4 --print-width=100 --single-quote --trailing-coma  --write *.js *.js",
+    "benchmark": "node benchmark.js"
   },
   "repository": {
     "type": "git",
@@ -34,7 +35,8 @@
   "devDependencies": {
     "google-closure-compiler-js": "^20161201.0.0",
     "mocha": "^3.2.0",
-    "webpack": "^1.14.0",
-    "pretty": "^1.0.0"
+    "nanobench": "^1.0.3",
+    "pretty": "^1.0.0",
+    "webpack": "^1.14.0"
   }
 }
