change to correct prettier package

--- a/package.json
+++ b/package.json
@@ -40,6 +40,6 @@
     "mocha": "^3.2.0",
     "nanobench": "^1.0.3",
     "nanon": "^1.0.1",
-    "pretty": "^1.0.0"
+    "prettier": "^1.11.1"
   }
 }
