Revert "Feat: Add second level domain support (#4)"
This reverts commit 19725ed5cbb04fbade9d56c9b7cd2c1b32695b11.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "extract-domain",
-  "version": "2.1.0",
+  "version": "2.0.6",
   "description": "Extract domain name from URL",
   "main": "dist/extract-domain.min.js",
   "author": "Bjarne Oeverli",
@@ -34,8 +34,7 @@
     "string",
     "url",
     "browser",
-    "node",
-    "second level"
+    "node"
   ],
   "devDependencies": {
     "mocha": "^3.2.0",
