--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
   "name": "extract-domain",
-  "version": "2.2.1",
+  "version": "2.3.0",
   "description": "Extract domain name from URL",
-  "main": "dist/extract-domain.min.js",
+    "source": "index.js",
+  "main": "dist/extract-domain.js",
+  "exports": "./dist/extract-domain.modern.js",
+  "module": "dist/extract-domain.module.js",
+  "unpkg": "dist/extract-domain.umd.js",
   "author": "Bjarne Oeverli",
   "license": "MIT",
   "scripts": {
-    "build": "npm run pretty && nanon",
+    "build": "npm run pretty && microbundle",
     "test": "mocha -R spec index.test.js",
     "pretty": "prettier --tab-width=4 --print-width=100 --single-quote --trailing-comma  --write *.js *.js",
     "benchmark": "node benchmark.js"
-  },
-  "nanon": {
-    "input": "index.js",
-    "name": "extractDomain",
-    "output": "dist/extract-domain.min.js"
   },
   "repository": {
     "type": "git",
@@ -37,9 +36,12 @@
     "node"
   ],
   "devDependencies": {
-    "mocha": "^3.2.0",
+    "microbundle": "^0.13.0",
+    "mocha": "^8.3.2",
     "nanobench": "^1.0.3",
-    "nanon": "^2.0.2",
     "prettier": "^1.11.1"
+  },
+  "dependencies": {
+    "psl": "^1.8.0"
   }
 }
