Move return to the try block to prevent throwing psl does not exist error

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "extract-domain",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "description": "Extract domain name from URL",
   "source": "index.js",
   "main": "dist/extract-domain.js",
@@ -12,7 +12,7 @@
   "scripts": {
     "build": "npm run pretty && microbundle",
     "test": "mocha -R spec index.test.js",
-    "pretty": "prettier --tab-width=4 --print-width=100 --single-quote --trailing-comma  --write *.js *.js",
+    "pretty": "prettier --tab-width=4 --print-width=100 --single-quote --trailing-comma=es5 --write *.js *.js",
     "benchmark": "node benchmark.js"
   },
   "repository": {
