--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "extract-domain",
-  "version": "2.3.4",
+  "version": "2.3.5",
   "description": "Extract domain name from URL",
   "source": "index.js",
   "main": "dist/extract-domain.js",
-  "exports": "./dist/extract-domain.modern.js",
+  "exports": {
+    ".": {
+      "import": "./dist/extract-domain.modern.js"
+    },
+    "./package.json": "./package.json"
+  },
   "module": "dist/extract-domain.module.js",
   "unpkg": "dist/extract-domain.umd.js",
   "author": "Bjarne Oeverli",
