--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "extract-domain",
-  "version": "2.4.4",
+  "version": "2.4.5",
   "description": "Extract domain name from URL",
   "source": "index.js",
   "main": "dist/extract-domain.js",
@@ -40,14 +40,12 @@
     "node"
   ],
   "devDependencies": {
+    "microbundle": "^0.15.0",
     "mocha": "^8.3.2",
     "nanobench": "^1.0.3",
     "prettier": "^1.11.1"
   },
   "optionalDependencies": {
     "psl": "^1.8.0"
-  },
-  "dependencies": {
-    "microbundle": "^0.15.0"
   }
 }
