--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "extract-domain",
-  "version": "4.1.3",
+  "version": "4.1.4",
   "description": "Extract domain name from URL",
   "type": "module",
   "source": "index.ts",
@@ -40,12 +40,14 @@
     "node"
   ],
   "devDependencies": {
+    "@types/psl": "^1.1.0",
     "microbundle": "^0.15.1",
     "mocha": "^10.2.0",
     "nanobench": "^1.0.3",
-    "prettier": "^1.11.1"
+    "prettier": "^1.11.1",
+    "psl": "^1.9.0"
   },
-  "dependencies": {
+  "peerDependencies": {
     "psl": "^1.9.0"
   }
 }
