feat: change to bun

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "extract-domain",
-  "version": "4.1.4",
+  "version": "4.1.5",
   "description": "Extract domain name from URL",
   "type": "module",
   "source": "index.ts",
@@ -14,10 +14,11 @@
   "author": "Bjarne Oeverli",
   "license": "MIT",
   "scripts": {
-    "build": "npm run pretty && microbundle -i extractDomain -f modern,esm,cjs index.ts",
-    "test": "mocha -R spec tests/",
+    "build": "npm run pretty && bunx --bun microbundle -i extractDomain -f modern,esm,cjs index.ts",
+    "test": "bun test tests/",
+    "test:watch": "bun test --watch tests/",
     "pretty": "prettier --tab-width=4 --print-width=100 --single-quote --trailing-comma=es5 --write *.ts *.ts",
-    "benchmark": "node benchmark/benchmark.js"
+    "benchmark": "bun run benchmark/benchmark.js"
   },
   "repository": {
     "type": "git",
