--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,19 +8,12 @@ on: [push, pull_request]
 jobs:
     build:
         runs-on: ubuntu-latest
-
-        strategy:
-            matrix:
-                node-version: [16.x, 18.x, 20.x]
-                # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
         steps:
             - uses: actions/checkout@v2
-            - name: Use Node.js ${{ matrix.node-version }}
-              uses: actions/setup-node@v2
+            - name: Install bun
+              uses: oven-sh/setup-bun@v1
               with:
-                  node-version: ${{ matrix.node-version }}
-                  cache: 'npm'
+                bun-version: latest
             - run: npm ci
             - run: npm run build --if-present
             - run: npm test
